--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>assik1</artifactId>
+    <artifactId>assignment1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -31,7 +31,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.example.assignment1.CLI</mainClass>
+                            <mainClass>CLI</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -48,7 +48,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Existing plugins -->
         </plugins>
     </build>
 </project>
